--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: pds
+name: ntu-m1-assignment
 channels:
   - defaults
 dependencies:
@@ -15,3 +15,5 @@ dependencies:
   - pip:
       - duckdb==1.1.3
       - duckdb-engine==0.15.0
+      - streamlit
+      - plotly
